--- a/about.html
+++ b/about.html
@@ -299,9 +299,9 @@
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
-                                    <a href="team-details.html">Leslie Alexander</a>
+                                    <a href="javascript:void(0)">Lenin</a>
                                 </h3><!-- /.team-card-four__title -->
-                                <p class="team-card-four__designation">Marketing</p><!-- /.team-card-four__designation -->
+                                <p class="team-card-four__designation">Co founder</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
                                     <a href="https://facebook.com/">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -330,9 +330,9 @@
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
-                                    <a href="team-details.html">Kristin Watson</a>
+                                    <a href="javascript:void(0)">Yashadhi</a>
                                 </h3><!-- /.team-card-four__title -->
-                                <p class="team-card-four__designation">CTO & Founder</p><!-- /.team-card-four__designation -->
+                                <p class="team-card-four__designation">CTO</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
                                     <a href="https://facebook.com/">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -361,7 +361,38 @@
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
-                                    <a href="team-details.html">Brooklyn Simmons</a>
+                                    <a href="javascript:void(0)">Siva Mani</a>
+                                </h3><!-- /.team-card-four__title -->
+                                <p class="team-card-four__designation">Developer</p><!-- /.team-card-four__designation -->
+                                <div class="team-card-four__social">
+                                    <a href="https://facebook.com/">
+                                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                                        <span class="sr-only">Facebook</span>
+                                    </a>
+                                    <a href="https://www.instagram.com/">
+                                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="sr-only">Instagram</span>
+                                    </a>
+                                    <a href="https://twitter.com/">
+                                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                                        <span class="sr-only">Twitter</span>
+                                    </a>
+                                    <a href="https://www.linkedin.com/">
+                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                                        <span class="sr-only">Linkedin</span>
+                                    </a>
+                                </div><!-- /.team-card-four__social__list -->
+                            </div><!-- /.team-card-four__content -->
+                        </div><!-- /.team-card-four -->
+                    </div><!-- /.item -->
+                    <div class="item">
+                        <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                            <div class="team-card-four__image">
+                                <img src="assets/images/team2.svg" alt="Brooklyn Simmons">
+                            </div><!-- /.team-card-four__image -->
+                            <div class="team-card-four__content">
+                                <h3 class="team-card-four__title">
+                                    <a href="javascript:void(0)">Hari Krish</a>
                                 </h3><!-- /.team-card-four__title -->
                                 <p class="team-card-four__designation">Developer</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
