--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
                 <div class="main-header__inner">
                     <div class="main-header__logo">
                         <a href="index.html">
-                            <img src="assets/images/m.svg" alt="MPL Softwares" width="50">
+                            <img src="assets/images/mpl_logo.svg" alt="MPL Softwares" width="50">
                             <div class="logo-text">
-                                <h1>MPL</h1>
+                                <h1>PL</h1>
                                 <p>Softwares</p>
                             </div>
                         </a>
@@ -459,7 +459,7 @@
                         <div class="col-md-6 col-xl-4">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
+                                    <img src="assets/images/mpl_logo.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
                                     We’re Strategic Software Development Company
@@ -553,7 +553,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/m.svg" width="155" alt="" /></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/mpl_logo.svg" width="55" alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
