--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
     <div class="custom-cursor__cursor-two"></div>
 
     <div class="preloader">
-        <div class="preloader__image" style="background-image: url(assets/images/loader.svg);"></div>
+        <!-- <div class="preloader__image" style="background-image: url(assets/images/loader.svg);"></div> -->
+        <div id="loader-content"></div>  
+        <div id="mpl-logo-m"> 
+          <ul> 
+          </ul>
+        </div>
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -68,9 +73,9 @@
                 <div class="main-header__inner">
                     <div class="main-header__logo">
                         <a href="index.html">
-                            <img src="assets/images/m.svg" alt="MPL Softwares" >
+                            <img src="assets/images/mpl_logo.svg" alt="MPL Softwares" >
                             <div class="logo-text">
-                                <h1>MPL</h1>
+                                <h1>PL</h1>
                                 <p>Softwares </p>
                             </div>
                         </a>
@@ -1395,7 +1400,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                         <div class="col-md-6 col-xl-4">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
+                                    <img src="assets/images/mpl_logo.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
                                     We’re Strategic Software Development Company
@@ -1489,7 +1494,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/m.svg" width="155" alt="" /></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/mpl_logo.svg" width="55" alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
@@ -1663,6 +1668,89 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
             }
         });
     </script>
+    <script>
+        
+    var w = 100, h = 113, r = 18,
+      wx = w / 2, wy = h / 2 - r, angle = 45, liArray = [],
+      load = document.getElementById('mpl-logo-m'),
+      ul = load.getElementsByTagName('ul')[0];
+    for (var i = 0; i < 74; i++) {
+      var li = document.createElement('li');//$('<li/>').appendTo($('#ant-motion-load ul'));
+      ul.appendChild(li);
+      liArray.push(li);
+      var _left = 110, _top = 110, _x, _y;
+      if (i < 25) {
+        _left = -wx;
+        _top = wy - r / 5 * i;
+      } else if (i < 41) {
+        angle = 45 * Math.PI / 180;
+        _left = -wx + (i - 24) * (r / 5) * Math.cos(angle);
+        _top = wy - r / 5 * 24 + (i - 24) * (r / 5) * Math.sin(angle);
+      } else if (i < 57) {
+        _x = -wx + 16 * (r / 5) * Math.cos(45 * Math.PI / 180);
+        _y = wy - r / 5 * 24 + 16 * (r / 5) * Math.sin(45 * Math.PI / 180);
+        angle = -45 * Math.PI / 180;
+        _left = _x + (i - 40) * (r / 5) * Math.cos(angle);
+        _top = _y + (i - 40) * (r / 5) * Math.sin(angle);
+      } else if (i < 73) {
+        _left = _x + 16 * (r / 5) * Math.cos(-45 * Math.PI / 180);
+        _top = (wy - r / 5 * 24) + r / 5 * (i - 56);
+      } else {
+        _left = -25;
+        _top = 10;
+        r = 14;
+      }
+      li.style.left = _left + 'px';
+      li.style.top = _top + 'px';
+      li.style.width = r + 'px';
+      li.style.height = r + 'px';
+    }
+
+    function getStyle(el) {
+      if (window.getComputedStyle) {
+        return window.getComputedStyle(el, null);
+      } else if (document.documentElement.currentStyle) {
+        el.currentStyle;
+      }
+      return null;
+    }
+
+    function removeLoad() {
+      load.parentNode.removeChild(load);
+    }
+    // var computed = getStyle(load);
+    function animationStart() {
+      var computed = getStyle(load); 
+      if (!load || computed.opacity === '0') {
+        removeLoad();
+        return;
+      }
+      setTimeout(function () {
+        if (computed.opacity === '0') {
+          removeLoad();
+          return;
+        }
+        liArray.forEach(function (item, i) {
+          item.style.transform = 'scale(0)';
+          item.style.transitionDelay = (i === liArray.length - 1 ? 10 : i) * .007 + 's';
+          item.style.transitionTimingFunction = 'cubic-bezier(0.68, -0.55, 0.265, 1.55)';
+        });
+        setTimeout(function () {
+          if (computed.opacity === '0') {
+            removeLoad();
+            return;
+          }
+          liArray.forEach(function (item, i) {
+            item.style.transform = 'scale(1)';
+            item.style.transitionDelay = (i === liArray.length - 1 ? 10 : i) * .007 + 's';
+            item.style.transitionTimingFunction = 'cubic-bezier(0.175, 0.885, 0.32, 1.275)';
+          });
+          setTimeout(animationStart, 1300);
+        }, 1300);
+      }, 100);
+    }
+    animationStart();
+</script>
 </body>
 
 
