--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MPL Softwares</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/mpl_logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/mpl_logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/mpl_logo.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta name="title" content="About MPL Softwares | Innovative Tech Solutions with a Creative Touch"/>
     <meta name="keywords" content="About MPL Softwares
@@ -59,7 +59,11 @@
     <div class="custom-cursor__cursor-two"></div>
 
     <div class="preloader">
-        <div class="preloader__image" style="background-image: url(assets/images/loader.svg);"></div>
+        <div id="loader-content"></div>  
+        <div id="mpl-logo-m"> 
+          <ul> 
+          </ul>
+        </div>
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -332,7 +336,7 @@
                                 <h3 class="team-card-four__title">
                                     <a href="javascript:void(0)">Yashadhi</a>
                                 </h3><!-- /.team-card-four__title -->
-                                <p class="team-card-four__designation">CTO</p><!-- /.team-card-four__designation -->
+                                <p class="team-card-four__designation">Project Manager</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
                                     <a href="https://facebook.com/">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -363,7 +367,7 @@
                                 <h3 class="team-card-four__title">
                                     <a href="javascript:void(0)">Siva Mani</a>
                                 </h3><!-- /.team-card-four__title -->
-                                <p class="team-card-four__designation">Developer</p><!-- /.team-card-four__designation -->
+                                <p class="team-card-four__designation">Senior Developer</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
                                     <a href="https://facebook.com/">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -394,7 +398,7 @@
                                 <h3 class="team-card-four__title">
                                     <a href="javascript:void(0)">Hari Krish</a>
                                 </h3><!-- /.team-card-four__title -->
-                                <p class="team-card-four__designation">Developer</p><!-- /.team-card-four__designation -->
+                                <p class="team-card-four__designation">Senior Developer</p><!-- /.team-card-four__designation -->
                                 <div class="team-card-four__social">
                                     <a href="https://facebook.com/">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
@@ -518,7 +522,7 @@
                                 <h2 class="footer-widget__title">contact us</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__info">
                                     <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170, USA</li>
-                                    <li><i class="flaticon-pin"></i>IT Plaza, DSO, Dubai, UAE</li>
+                                    <li><i class="flaticon-pin"></i>Silicon Oasis, Dubai, UAE</li>
                                     <li><i class="flaticon-phone"></i><a href="tel:+971543857364">+971 543857364</a></li>
                                     <li><i class="flaticon-email"></i><a href="mailto:contact@mpltech.com">contact@mpltech.com</a></li>
                                 </ul><!-- /.list-unstyled -->
