--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MPL Softwares</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/mpl_logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/mpl_logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/mpl_logo.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta name="title" content="Your Strategic Tech Partner | MPL Softwares - Web, Mobile, and SaaS Development Experts" />
     <meta name="keywords" content="MPL Softwares
@@ -466,7 +466,7 @@ __SVGATOR_PLAYER__.build({"root":"ewyj3oh1je3c1","animations":[{"duration":8500,
 
 
 
-                <h6 class="sec-title__tagline">our services</h6><!-- /.sec-title__tagline -->
+                <h6 class="sec-title__tagline">Our services</h6><!-- /.sec-title__tagline -->
 
 
 
@@ -652,7 +652,7 @@ __SVGATOR_PLAYER__.build({"root":"ewyj3oh1je3c1","animations":[{"duration":8500,
             <div class="container tabs-box">
                 <div class="sec-title text-center">
 
-                    <h6 class="sec-title__tagline">Curious how MPL Tech unlocks solutions to grow your business?</h6><!-- /.sec-title__tagline -->
+                    <h6 class="sec-title__tagline">Curious how MPL softwares unlocks solutions to grow your business?</h6><!-- /.sec-title__tagline -->
 
                     <h3 class="sec-title__title">Click and Open the Mystery Box</h3><!-- /.sec-title__title -->
                 </div><!-- /.sec-title -->
@@ -928,7 +928,7 @@ __SVGATOR_PLAYER__.build({"root":"e65JtZjEkLp1","animations":[{"duration":2500,"
                             </ul>
                             <a class="mpl-btn" href="about.html">
 
-                                <span class="mpl-btn__text">About Us</span>
+                                <span class="mpl-btn__text">About us</span>
 
                                 <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
 
@@ -1411,7 +1411,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
-                                    <a href="https://facebook.com/">
+                                    <a href="https://www.facebook.com/profile.php?id=61570859921483">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
                                         <span class="sr-only">Facebook</span>
                                     </a>
@@ -1419,7 +1419,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                         <i class="fab fa-twitter" aria-hidden="true"></i>
                                         <span class="sr-only">Twitter</span>
                                     </a>
-                                    <a href="https://www.linkedin.com/">
+                                    <a href="https://www.linkedin.com/company/mpl-softwares/">
                                         <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                                         <span class="sr-only">Linkedin</span>
                                     </a>
@@ -1459,7 +1459,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                 <h2 class="footer-widget__title">contact us</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__info">
                                     <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170, USA</li>
-                                    <li><i class="flaticon-pin"></i>IT Plaza, DSO, Dubai, UAE</li>
+                                    <li><i class="flaticon-pin"></i>Silicon Oasis, Dubai, UAE</li>
                                     <li><i class="flaticon-phone"></i><a href="tel:+971543857364">+971 543857364</a></li>
                                     <li><i class="flaticon-email"></i><a href="mailto:contact@mpltech.com">contact@mpltech.com</a></li>
                                 </ul><!-- /.list-unstyled -->
@@ -1669,87 +1669,88 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
         });
     </script>
     <script>
-        
-    var w = 100, h = 113, r = 18,
-      wx = w / 2, wy = h / 2 - r, angle = 45, liArray = [],
-      load = document.getElementById('mpl-logo-m'),
-      ul = load.getElementsByTagName('ul')[0];
-    for (var i = 0; i < 74; i++) {
-      var li = document.createElement('li');//$('<li/>').appendTo($('#ant-motion-load ul'));
-      ul.appendChild(li);
-      liArray.push(li);
-      var _left = 110, _top = 110, _x, _y;
-      if (i < 25) {
-        _left = -wx;
-        _top = wy - r / 5 * i;
-      } else if (i < 41) {
-        angle = 45 * Math.PI / 180;
-        _left = -wx + (i - 24) * (r / 5) * Math.cos(angle);
-        _top = wy - r / 5 * 24 + (i - 24) * (r / 5) * Math.sin(angle);
-      } else if (i < 57) {
-        _x = -wx + 16 * (r / 5) * Math.cos(45 * Math.PI / 180);
-        _y = wy - r / 5 * 24 + 16 * (r / 5) * Math.sin(45 * Math.PI / 180);
-        angle = -45 * Math.PI / 180;
-        _left = _x + (i - 40) * (r / 5) * Math.cos(angle);
-        _top = _y + (i - 40) * (r / 5) * Math.sin(angle);
-      } else if (i < 73) {
-        _left = _x + 16 * (r / 5) * Math.cos(-45 * Math.PI / 180);
-        _top = (wy - r / 5 * 24) + r / 5 * (i - 56);
-      } else {
-        _left = -25;
-        _top = 10;
-        r = 14;
-      }
-      li.style.left = _left + 'px';
-      li.style.top = _top + 'px';
-      li.style.width = r + 'px';
-      li.style.height = r + 'px';
-    }
-
-    function getStyle(el) {
-      if (window.getComputedStyle) {
-        return window.getComputedStyle(el, null);
-      } else if (document.documentElement.currentStyle) {
-        el.currentStyle;
-      }
-      return null;
-    }
-
-    function removeLoad() {
-      load.parentNode.removeChild(load);
-    }
-    // var computed = getStyle(load);
-    function animationStart() {
-      var computed = getStyle(load); 
-      if (!load || computed.opacity === '0') {
-        removeLoad();
-        return;
-      }
-      setTimeout(function () {
-        if (computed.opacity === '0') {
-          removeLoad();
-          return;
+       window.addEventListener('load', function() { 
+        var w = 100, h = 113, r = 18,
+        wx = w / 2, wy = h / 2 - r, angle = 45, liArray = [],
+        load = document.getElementById('mpl-logo-m'),
+        ul = load.getElementsByTagName('ul')[0];
+        for (var i = 0; i < 74; i++) {
+        var li = document.createElement('li');//$('<li/>').appendTo($('#ant-motion-load ul'));
+        ul.appendChild(li);
+        liArray.push(li);
+        var _left = 110, _top = 110, _x, _y;
+        if (i < 25) {
+            _left = -wx;
+            _top = wy - r / 5 * i;
+        } else if (i < 41) {
+            angle = 45 * Math.PI / 180;
+            _left = -wx + (i - 24) * (r / 5) * Math.cos(angle);
+            _top = wy - r / 5 * 24 + (i - 24) * (r / 5) * Math.sin(angle);
+        } else if (i < 57) {
+            _x = -wx + 16 * (r / 5) * Math.cos(45 * Math.PI / 180);
+            _y = wy - r / 5 * 24 + 16 * (r / 5) * Math.sin(45 * Math.PI / 180);
+            angle = -45 * Math.PI / 180;
+            _left = _x + (i - 40) * (r / 5) * Math.cos(angle);
+            _top = _y + (i - 40) * (r / 5) * Math.sin(angle);
+        } else if (i < 73) {
+            _left = _x + 16 * (r / 5) * Math.cos(-45 * Math.PI / 180);
+            _top = (wy - r / 5 * 24) + r / 5 * (i - 56);
+        } else {
+            _left = -25;
+            _top = 10;
+            r = 14;
         }
-        liArray.forEach(function (item, i) {
-          item.style.transform = 'scale(0)';
-          item.style.transitionDelay = (i === liArray.length - 1 ? 10 : i) * .007 + 's';
-          item.style.transitionTimingFunction = 'cubic-bezier(0.68, -0.55, 0.265, 1.55)';
-        });
-        setTimeout(function () {
-          if (computed.opacity === '0') {
+        li.style.left = _left + 'px';
+        li.style.top = _top + 'px';
+        li.style.width = r + 'px';
+        li.style.height = r + 'px';
+        }
+
+        function getStyle(el) {
+        if (window.getComputedStyle) {
+            return window.getComputedStyle(el, null);
+        } else if (document.documentElement.currentStyle) {
+            el.currentStyle;
+        }
+        return null;
+        }
+
+        function removeLoad() {
+        load.parentNode.removeChild(load);
+        }
+        // var computed = getStyle(load);
+        function animationStart() {
+        var computed = getStyle(load); 
+        if (!load || computed.opacity === '0') {
             removeLoad();
             return;
-          }
-          liArray.forEach(function (item, i) {
-            item.style.transform = 'scale(1)';
+        }
+        setTimeout(function () {
+            if (computed.opacity === '0') {
+            removeLoad();
+            return;
+            }
+            liArray.forEach(function (item, i) {
+            item.style.transform = 'scale(0)';
             item.style.transitionDelay = (i === liArray.length - 1 ? 10 : i) * .007 + 's';
-            item.style.transitionTimingFunction = 'cubic-bezier(0.175, 0.885, 0.32, 1.275)';
-          });
-          setTimeout(animationStart, 1300);
-        }, 1300);
-      }, 100);
-    }
-    animationStart();
+            item.style.transitionTimingFunction = 'cubic-bezier(0.68, -0.55, 0.265, 1.55)';
+            });
+            setTimeout(function () {
+            if (computed.opacity === '0') {
+                removeLoad();
+                return;
+            }
+            liArray.forEach(function (item, i) {
+                item.style.transform = 'scale(1)';
+                item.style.transitionDelay = (i === liArray.length - 1 ? 10 : i) * .007 + 's';
+                item.style.transitionTimingFunction = 'cubic-bezier(0.175, 0.885, 0.32, 1.275)';
+            });
+            setTimeout(animationStart, 1300);
+            }, 1300);
+        }, 100);
+        }
+        animationStart();
+    });
 </script>
 </body>
 
