--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,7 @@
                         <div class="google-map__info">
                             <h3 class="google-map__info__title">UAE</h3>
                             <ul class="list-unstyled google-map__info__list">
-                                <li><i class="flaticon-pin"></i>IT Plaza, Dubai Silicon Oasis</li>
+                                <li><i class="flaticon-pin"></i>Silicon Oasis, Dubai</li>
                                 <li><i class="flaticon-phone"></i><a href="tel:+971 543 8573 64">+971 543 8573 64</a></li>
                                 <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
                             </ul>
@@ -267,15 +267,15 @@
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
-                                    <a href="https://facebook.com/">
+                                    <a href="https://www.facebook.com/profile.php?id=61570859921483">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
                                         <span class="sr-only">Facebook</span>
                                     </a>
-                                    <a href="https://twitter.com/">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                        <span class="sr-only">Twitter</span>
+                                    <a href="https://www.instagram.com/mplsoftwares/">
+                                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="sr-only">Instagram</span>
                                     </a>
-                                    <a href="https://www.linkedin.com/">
+                                    <a href="https://www.linkedin.com/company/mpl-softwares/">
                                         <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                                         <span class="sr-only">Linkedin</span>
                                     </a>
