--- a/about.html
+++ b/about.html
@@ -474,15 +474,15 @@
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
-                                    <a href="https://facebook.com/">
+                                    <a href="https://www.facebook.com/profile.php?id=61570859921483">
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
                                         <span class="sr-only">Facebook</span>
                                     </a>
-                                    <a href="https://twitter.com/">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                        <span class="sr-only">Twitter</span>
+                                    <a href="https://www.instagram.com/mplsoftwares/">
+                                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="sr-only">Instagram</span>
                                     </a>
-                                    <a href="https://www.linkedin.com/">
+                                    <a href="https://www.linkedin.com/company/mpl-softwares/">
                                         <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                                         <span class="sr-only">Linkedin</span>
                                     </a>
