--- a/index.html
+++ b/index.html
@@ -1415,9 +1415,9 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
                                         <span class="sr-only">Facebook</span>
                                     </a>
-                                    <a href="https://twitter.com/">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                        <span class="sr-only">Twitter</span>
+                                    <a href="https://www.instagram.com/mplsoftwares/">
+                                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="sr-only">Instagram</span>
                                     </a>
                                     <a href="https://www.linkedin.com/company/mpl-softwares/">
                                         <i class="fab fa-linkedin-in" aria-hidden="true"></i>
