--- a/about.html
+++ b/about.html
@@ -521,7 +521,7 @@
                             <div class="footer-widget footer-widget--contact">
                                 <h2 class="footer-widget__title">contact us</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__info">
-                                    <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170, USA</li>
+                                    <li><i class="flaticon-pin"></i>132 Laurel Way, Herndon, Virginia, 20170, USA</li>
                                     <li><i class="flaticon-pin"></i>Silicon Oasis, Dubai, UAE</li>
                                     <li><i class="flaticon-phone"></i><a href="tel:+971543857364">+971 543857364</a></li>
                                     <li><i class="flaticon-email"></i><a href="mailto:contact@mpltech.com">contact@mpltech.com</a></li>
