--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,7 @@
                         <div class="google-map__info">
                             <h3 class="google-map__info__title">USA</h3>
                             <ul class="list-unstyled google-map__info__list">
-                                <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170</li>
+                                <li><i class="flaticon-pin"></i>132 Laurel Way, Herndon, Virginia, 20170</li>
                                 <li><i class="flaticon-phone"></i><a href="tel:+1 (469) 263 0399">+1 (469) 263 0399</a></li>
                                 <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
                             </ul>
@@ -315,7 +315,7 @@
                             <div class="footer-widget footer-widget--contact">
                                 <h2 class="footer-widget__title">contact us</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__info">
-                                    <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170, USA</li>
+                                    <li><i class="flaticon-pin"></i>132 Laurel Way, Herndon, Virginia, 20170, USA</li>
                                     <li><i class="flaticon-pin"></i>Silicon Oasis, Dubai, UAE</li>
                                     <li><i class="flaticon-phone"></i><a href="tel:+971543857364">+971 543857364</a></li>
                                     <li><i class="flaticon-email"></i><a href="mailto:contact@mpltech.com">contact@mpltech.com</a></li>
